# twitch-bot

./: .formatter.exs  .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  fourmolu.yaml  mix.exs  shard.yml
config/: config.exs
crystal/: LICENSE  shard.yml
crystal/src/: kenranbot.cr
haskell/: .gitignore  kenranbot.cabal
haskell/src-exe/: Main.hs
lib/: bot.ex  irc.ex  kenran_bot.ex  main.ex  twitch.ex  twitch_auth.ex
lib/bot/: ws.ex
lib/twitch/: api.ex  auth.ex  client.ex  parser.ex  token.ex  token_file_persistor.ex  token_file_storage.ex  token_persistor.ex  token_storage.ex
lib/twitch/api/: io.ex
lib/twitch/auth/: effect.ex
spec/: kenranbot_spec.cr  spec_helper.cr
spec/kenran/: parser_spec.cr
src/: irc.cr  kenranbot.cr  main.cr  twitch.cr
src-exe/: Main.hs
src/kenran/: bot.cr  irc_command.cr  parser.cr
test/: irc_test.exs  kenran_bot_test.exs  test_helper.exs
test/twitch/: auth_test.exs  parser_test.exs
