cabal-version:   3.4
name:            kenranbot
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Johannes Maier
maintainer:      johannes.maier@mailbox.de
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable kenranbot-exe
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , text
    , websockets

  hs-source-dirs:   src-exe
  default-language: GHC2021
